--- a/practica/01. Beeldherkenning/Practicum/glaswerk/kwaliteitscontrole.ipynb
+++ b/practica/01. Beeldherkenning/Practicum/glaswerk/kwaliteitscontrole.ipynb
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "id": "4be3c326",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "import random\n"
    ]
   },
   {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "397f1676-3852-41ea-b367-77520ef2e2c2",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "<class 'list'>\n",
-      " de gegenereerde lijst aantal_lampen bevat 249 lampen.\n"
+      " de gegenereerde lijst aantal_lampen bevat 250 lampen.\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 37,
    "id": "ac97b428-2e7f-4088-a0c1-a83f619802e0",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
     "    for i in range(0, len(input_lijst), batch_size):\n",
     "        controle_lijst.append(controleer_lampen(input_lijst[i:i+batch_size]))\n",
     "\n",
-    "    percentage = f'{100*sum(controle_lijst)/len(input_lijst)}%'\n",
+    "    percentage = round(100*sum(controle_lijst)/len(input_lijst),2)\n",
     "\n",
     "    return percentage # , controle_lijst\n",
     "\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 38,
    "id": "dc869740",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
       "<class 'list'>\n",
       " de dag productie bevat 10000 lampen.\n",
       " de testset bevat 750 lampen.\n",
-      " de eerste controle ronde bevat 1.0666666666666667% defecte lampen.\n"
+      " de eerste controle ronde bevat 1.6% defecte lampen.\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
     "\n",
     "first_controle = controleer_lampen_batches(testset)\n",
     "\n",
-    "print(f' de eerste controle ronde bevat {first_controle} defecte lampen.')"
+    "print(f' de eerste controle ronde bevat {first_controle}% defecte lampen.')"
    ]
   },
   {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 40,
    "id": "061c9628-0244-4787-930e-0272c943caab",
    "metadata": {
     "tags": []
@@ -301,8 +301,19 @@
      "text": [
       "<class 'list'>\n",
       " de dag productie bevat 100000 lampen.\n",
-      " de testset bevat 25000 lampen.\n",
-      " de eerste controle ronde bevat 1.112% defecte lampen.\n"
+      " Een testset bevat 250 lampen.\n",
+      " De 1e controle ronde bevat 2.8 defecte lampen.\n",
+      " De 2e controle ronde bevat 1.6 defecte lampen.\n",
+      " De 3e controle ronde bevat 5.2 defecte lampen.\n",
+      " De 4e controle ronde bevat 4.0 defecte lampen.\n",
+      " De 5e controle ronde bevat 1.2 defecte lampen.\n",
+      " De 6e controle ronde bevat 2.8 defecte lampen.\n",
+      " De 7e controle ronde bevat 3.2 defecte lampen.\n",
+      " De 8e controle ronde bevat 4.0 defecte lampen.\n",
+      " De 9e controle ronde bevat 3.6 defecte lampen.\n",
+      " De 10e controle ronde bevat 2.8 defecte lampen.\n",
+      "[2.8, 1.6, 5.2, 4.0, 1.2, 2.8, 3.2, 4.0, 3.6, 2.8]\n",
+      " Het gemiddelde van de 10 controle rondes is 3.12% defecte lampen.\n"
      ]
     }
    ],
@@ -319,11 +330,24 @@
     "print(f' de dag productie bevat {len(dag_productie)} lampen.')\n",
     "\n",
     "testset =  selecteer_willekeurige_lampen(dag_productie,250)[0]\n",
-    "print(f' de testset bevat {len(testset)} lampen.')\n",
+    "print(f' Een testset bevat {len(testset)} lampen.')\n",
     "\n",
     "first_controle = controleer_lampen_batches(testset)\n",
     "\n",
-    "print(f' de eerste controle ronde bevat {first_controle} defecte lampen.')"
+    "\n",
+    "\n",
+    "runs = 10\n",
+    "run = 0\n",
+    "gemiddeldes = []\n",
+    "for i in range(runs):\n",
+    "    run += 1\n",
+    "    testset =  selecteer_willekeurige_lampen(dag_productie,250)[0]\n",
+    "    controle = controleer_lampen_batches(testset)\n",
+    "    print(f' De {run}e controle ronde bevat {controle} defecte lampen.')\n",
+    "    gemiddeldes.append(controle)\n",
+    "\n",
+    "print (gemiddeldes)\n",
+    "print(f' Het gemiddelde van de {runs} controle rondes is {sum(gemiddeldes)/len(gemiddeldes)}% defecte lampen.')\n"
    ]
   },
   {
